--- a/frontend/scoreboard/package.json
+++ b/frontend/scoreboard/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "front",
+  "name": "scoreboard",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
     "react-scripts": "1.1.5"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
